--- a/csy/贪吃蛇/index.html
+++ b/csy/贪吃蛇/index.html
@@ -22,10 +22,14 @@
         <div id="planescore">
             <span >得分:</span>
             <span id="score">0</span>
-
         </div>
     </div>
-
+    <div class="btn">
+        <button id="up">上</button>
+        <button id="left">左</button>
+        <button id="bottom">下</button>
+        <button id="right">右</button>
+    </div>
    <div id="container">
 
    </div>
