--- a/csy/index.html
+++ b/csy/index.html
@@ -82,7 +82,7 @@
             <ul class="left_ul">
                 <li id="btn1">五子棋</li>
                 <li id="btn2">贪吃蛇</li>
-                <li><a href="找不同/index.html">找不同</a></li>
+                <li><a href="找相同/index.html">找相同</a></li>
             </ul>
         </dvi>
 
