--- a/csy/index.html
+++ b/csy/index.html
@@ -83,6 +83,7 @@
                 <li id="btn1">五子棋</li>
                 <li id="btn2">贪吃蛇</li>
                 <li><a href="找相同/index.html">找相同</a></li>
+                <li><a href="找到鼠标/index.html">找到鼠标</a></li>
             </ul>
         </dvi>
 
